# N22DCDT033_PICO_LED

./: .gitignore  CONTRIBUTING.md  README.md  flow.md  phase.md  project_plan.md  requirements.md  skill.md
awulff-pico-playground-main/pico-daq/: CMakeLists.txt  pico_daq.cpp
awulff-pico-playground-main/pico-light-voice/: CMakeLists.txt
awulff-pico-playground-main/pico-light-voice/source/: lights.cpp  main.cpp
dataset/: README.txt  info.labels
dataset/testing/: info.labels
dataset/training/: info.labels
n22dcdt033_pico_led-cpp-mcu-v12-impulse-#1/: README.txt
n22dcdt033_pico_led-cpp-mcu-v12-impulse-#1/model-parameters/: model_metadata.h  model_variables.h
n22dcdt033_pico_led-cpp-mcu-v12-impulse-#1/tflite-model/: tflite_learn_968747_3_compiled.cpp  tflite_learn_968747_3_compiled.h
